--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -128,15 +131,15 @@
                     <form class="loginform">
 
                         <p> Email: <br>
-                            <input type="text" id="email" name="email" size="30" maxlength="30">
+                            <input type="text" id="email" placeholder="Enter your email" name="email" size="30" maxlength="30">
                         </p>
 
                         <p>
                             Password: <br>
-                            <input type="password" id="password" name="password" size="30" maxlength="30">
+                            <input type="password" id="password" placeholder="Enter your password" name="password" size="30" maxlength="30">
                         </p>
 
-                        <button type="button" class="btn btn-warning" onclick="showloggedin();">Login</button>
+                        <button type="button" class="btn btn-warning" class="loginBtn" onclick="showloggedin();">Login</button>
 
                     </form>
 
